# rucio-ds-generator

./: .env.template  .gitignore  README.md  config.example.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/dataset_generator/: __main__.py  config.py  generator.py  registry.py  rucio_client.py  state.py  writers.py
tests/: test_config.py  test_generator.py  test_main.py  test_registry.py  test_rucio_client.py  test_state.py  test_writers.py
