[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rucio-ds-generator"
version = "0.1.0"
description = "Generate dummy test datasets and register them into Rucio"
requires-python = ">=3.6"
dependencies = [
    "rucio-clients",
    "PyYAML",
    "tqdm",
    "requests",
    "python-dotenv>=0.20,<1.0",  # 1.0+ requires Python 3.8+
    "Jinja2",
]

[project.optional-dependencies]
test = [
    "pytest<7",       # 7.0+ dropped Python 3.6
]
dev = [
    "rucio-ds-generator[test]",
    "flake8<6",       # 6.0+ dropped Python 3.6
    "black<22",       # 22.0+ dropped Python 3.6
    "isort<5.12",     # 5.12+ dropped Python 3.6
    "mypy<0.981",     # 0.981+ dropped Python 3.6
]

[project.scripts]
dataset-generator = "dataset_generator.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
